# arkiv-contracts

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  flake.nix  foundry.toml  gas-report.json  justfile
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
.helix/: languages.toml
contracts/: Entity.sol  EntityRegistry.sol  IEntityRegistry.sol
contracts/types/: BlockNumber.sol  Ident32.sol
crates/arkiv-bindings/: Cargo.toml  build.rs
crates/arkiv-bindings/src/: decode.rs  lib.rs
crates/arkiv-bindings/src/types/: ident32.rs  mime128.rs
crates/arkiv-cli/: Cargo.toml
crates/arkiv-cli/src/: main.rs
crates/arkiv-genesis/: Cargo.toml  build.rs
crates/arkiv-genesis/src/: lib.rs
crates/arkiv-node/: Cargo.toml
crates/arkiv-node/src/: decode.rs  exex.rs  main.rs
crates/arkiv-store/: Cargo.toml
crates/arkiv-store/src/: decode.rs  jsonrpc.rs  lib.rs  logging.rs
docs/: architecture.md  attribute-encoding.md  changeSetHashV2.md  changeSetHashV3.md  entity-db-sidecar-response.md  entity-hash.md  entity-registry-spec.md  ident32-encoding.md  mime128-encoding.md  payload-commitment-analysis.md  reth-implementation-status-2026-04-20.md  value128-encoding.md
gas_profiler/: Cargo.toml  build.rs
gas_profiler/cli/: Cargo.toml
gas_profiler/cli/src/: artifact.rs  main.rs  report.rs
gas_profiler/src/: artifact.rs  main.rs  profiler.rs  report.rs  scenario.rs
script/: EntityRegistry.s.sol  GLM.s.sol  gen-genesis.sh
src/: BlockNumber.sol  Entity.sol  EntityHashing.sol  EntityRegistry.sol  GLM.sol  Ident32.sol  Mime128.sol  blob-payload-model.md  changeSetHash.md  changeSetHashV2.md  decode.rs  lib.rs  storage_layout.rs  throughput.md  wire.rs
src/types/: BlockNumber.sol  Ident32.sol  Mime128.sol  attribute_value.rs  decoded.rs  ident32.rs  mime128.rs  mod.rs
stress/: Cargo.toml  bootstrap.sh  genesis-template.json  genesis.json  start-reth.sh  stop-reth.sh
stress/src/: abi.rs  accounts.rs  config.rs  main.rs  metrics.rs  runner.rs  workloads.rs
test/: ERC20StorageInspector.sol  EntityRegistry.t.sol  EntityRegistryBase.t.sol  EntityRegistryChangeSet.t.sol  EntityRegistryHash.t.sol  EntityRegistryOps.t.sol  GLM.t.sol  README.md
test/e2e/: EntityLifecycle.t.sol
test/integration/: ExpiryLifecycle.t.sol  OperationSequencing.t.sol  OwnershipLifecycle.t.sol
test/unit/: AttributeHash.t.sol  ChainOp.t.sol  ComputeEntityHash.t.sol  CoreHash.t.sol  CreateEntityHash.t.sol  CreateEntityKey.t.sol  Dispatch.t.sol  EntityKey.t.sol  EntityStructHash.t.sol  Execute.t.sol  GuardEntityExpiry.t.sol  GuardEntityMutation.t.sol  Ident32.t.sol  Mime128.t.sol  Pack.t.sol  ValidateAttributes.t.sol  Views.t.sol  WrapEntityHash.t.sol
test/unit/guards/: RequireActive.t.sol  RequireExists.t.sol  RequireExpired.t.sol  RequireExpiryIncreased.t.sol  RequireFutureExpiry.t.sol  RequireNewOwner.t.sol  RequireNonZeroAddress.t.sol  RequireOwner.t.sol
test/unit/hashing/: AttributeHash.t.sol  ChainOp.t.sol  ChainOperationHash.t.sol  CoreHash.t.sol  EntityKey.t.sol  EntityStructHash.t.sol  Pack.t.sol
test/unit/ops/: Create.t.sol  Delete.t.sol  Expire.t.sol  Extend.t.sol  Transfer.t.sol  Update.t.sol
test/unit/types/: Ident32.t.sol  Mime128.t.sol
test/utils/: Base.t.sol  EntityRegistryHarness.sol  Lib.sol
test/utils/harness/: OpHarness.sol  ValidateAttributesHarness.sol
