[package]
name = "arkiv-bindings"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"

[dependencies]
alloy-primitives = "1.5"
alloy-sol-types = "1.5"
alloy-contract = "2.0"
eyre = "0.6"

[build-dependencies]
serde_json = "1"

[dev-dependencies]
alloy-primitives = { version = "1.5", features = ["arbitrary"] }
