[package]
name = "arkiv-bindings"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"

[features]
default = ["serde-wire"]

# Enables `Serialize` impls + the `wire::*` types' JSON shape matching the
# v2 ExEx → EntityDB JSON-RPC interface. On by default; opt out via
# `default-features = false` if you want the bindings without serde.
serde-wire = ["dep:serde", "alloy-primitives/serde"]

[dependencies]
alloy-primitives = "1.5"
alloy-sol-types = "1.5"
alloy-contract = "2.0"
eyre = "0.6"
serde = { version = "1", features = ["derive"], optional = true }

[build-dependencies]
serde_json = "1"

[dev-dependencies]
alloy-primitives = { version = "1.5", features = ["arbitrary", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
