[package]
name = "arkiv-stress"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1", default-features = false, features = [
    "provider-http",
    "signers",
    "signer-local",
    "signer-mnemonic",
    "sol-types",
    "contract",
    "consensus",
    "rpc-types",
    "network",
    "reqwest-rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
rand = "0.8"
